# Kontext_kompiler

./: .gitignore  .travis.yml  CMakeLists.txt  GTest.cmake  KontextQuickWorkingSpec.md  Notes.txt  Roadmap.md  Todo.md
include/: ConstexprString.hpp  Kompiler.hpp  Lexer.hpp  Lookup.hpp  Properties.hpp  Stack.hpp  Token.hpp  Type.hpp  Util.hpp  Value.hpp
source/: Kompiler.cpp  Stack.cpp  Value.cpp  main.cpp
tests/: KompileUnit.cpp  KompilerUnit.cpp
